--- a/src/pages/ProductosPage.css
+++ b/src/pages/ProductosPage.css
@@ -20,6 +20,7 @@
   font-family: 'Inter', sans-serif;
   box-sizing: border-box;
   align-self: start;
+  display: block;
 }
 
 .product-card:hover {
@@ -155,3 +156,4 @@ p {
   border-left: 4px solid #3498db;
   padding-left: 12px;
 }
+
